# flat-files-decoder

./: .gitignore  Cargo.toml  Readme.md  build.rs  example-create-17686085.dbin  example0017686312.dbin  go.mod  go.sum  main.go  temp_output.dbin
.github/workflows/: ci.yml
benches/: decoder.rs  stream_blocks.rs
benchmark_files/: 0017686110-ebfe6d2b6a25625a-c8cd7d28f8925104-17686021-default.dbin  0017686113-4d2029b14eb759c3-3e047e2815253f7c-17686021-default.dbin  0017686114-7d23a3e458beaff1-4d2029b14eb759c3-17686021-default.dbin  0017686115-f8d105f60fa2e78d-7d23a3e458beaff1-17686021-default.dbin  0017686119-aeb9a1707fcab1af-240e906e0192cbf8-17686053-default.dbin  0017686121-ca989aecff4b715f-fc749617debf0d38-17686053-default.dbin  0017686122-613992459bd6791c-ca989aecff4b715f-17686053-default.dbin  0017686124-1eca9b70fba5b94a-5899c91ff4d6bcc4-17686053-default.dbin  0017686126-ce26454bcb6edc2b-7dc58772bce851e4-17686053-default.dbin  0017686127-d0de6295e70f6c98-ce26454bcb6edc2b-17686053-default.dbin  0017686128-febb8b1a14ed0849-d0de6295e70f6c98-17686053-default.dbin  0017686129-edcd8da636408b71-febb8b1a14ed0849-17686053-default.dbin  0017686130-f722b6fdd7cc0cf9-edcd8da636408b71-17686053-default.dbin  0017686131-f5114bcb9da4d8dd-f722b6fdd7cc0cf9-17686053-default.dbin
src/: error.rs  lib.rs  main.rs
src/dbin/: error.rs  mod.rs
src/headers/: error.rs  mod.rs
src/protos/: block.proto  block.rs  bstream.proto  bstream.rs  mod.rs
src/receipts/: error.rs  logs.rs  mod.rs  receipt.rs
src/transactions/: access_list.rs  error.rs  mod.rs  signature.rs  transaction.rs  transaction_signed.rs  tx_type.rs
tests/: 0000000000.dbin.zst
tests/benchmark_files/: 0017686111-c1ed20dc4cffd7bd-ebfe6d2b6a25625a-17686021-default.dbin  0017686112-3e047e2815253f7c-c1ed20dc4cffd7bd-17686021-default.dbin  0017686116-5331aab87811944d-f8d105f60fa2e78d-17686021-default.dbin  0017686117-1ca6ae9fceb86bb3-5331aab87811944d-17686021-default.dbin  0017686118-240e906e0192cbf8-1ca6ae9fceb86bb3-17686021-default.dbin  0017686120-fc749617debf0d38-aeb9a1707fcab1af-17686053-default.dbin  0017686123-5899c91ff4d6bcc4-613992459bd6791c-17686053-default.dbin  0017686125-7dc58772bce851e4-1eca9b70fba5b94a-17686053-default.dbin  0017686132-8d6c5f1a64492edf-f5114bcb9da4d8dd-17686053-default.dbin
