[package]
name = "decoder"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = "0.7.7"
alloy-rlp = "0.3.7"
anyhow = "1.0.72"
clap = { version = "4.3.21", features = ["derive"] }
revm-primitives = "=1.1.2"
rand = "0.8.5"
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", version = "1.0.1", tag = "v1.0.1" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", version = "1.0.1", tag = "v1.0.1" }
thiserror = "1.0.44"
serde_json = "1.0.108"
serde = { version = "1.0.196", features = ["derive"] }
zstd = "0.13.0"
simple-log = "1.6.0"
rayon = "1.8.0"
ethereum-types = "=0.14.1"
bincode = "1.3.3"
tokio = { version = "1.35.0", features = ["full"] }
sf-protos = { git = "https://github.com/semiotic-ai/sf-protos.git", version = "0.1.0" }

prost = "0.12.3"
prost-types = "0.12.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
tokio-test = "0.4.3"

[[bench]]
name = "decoder"
harness = false

[[bench]]
name = "stream_blocks"
harness = false

[profile.release]
codegen-units = 1
lto = false

[build-dependencies]
prost-build = "0.12.3"
prost-wkt-build = "0.5.0"
